JBIDE-12508: Updated script + new Bot case for installation with Central
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@43551 a97e2381-89e5-4abb-bab3-167db6db766c